[gd_scene load_steps=3 format=3 uid="uid://f0d1eqgq5pbt"]

[ext_resource type="Script" path="res://Scripts/Scenes/HintOverlay.gd" id="1_dj3tx"]
[ext_resource type="PackedScene" uid="uid://cccfn7scn3fwg" path="res://Scenes/Hint.tscn" id="1_tgmot"]

[node name="HintOverlay" type="Control"]
visible = false
z_index = 100
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
script = ExtResource("1_dj3tx")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HintAnswers" parent="." instance=ExtResource("1_tgmot")]
visible = false
position = Vector2(960, 300)
HintText = "Goal of each level is to find all places listed here."
ArrowTargets = PackedVector2Array(960, 81)

[node name="HintLevelSelection" parent="." instance=ExtResource("1_tgmot")]
visible = false
position = Vector2(960, 300)
HintText = "Start by clicking on a level number."
ArrowTargets = PackedVector2Array(612, 121)

[node name="HintNextLevel" parent="." instance=ExtResource("1_tgmot")]
visible = false
position = Vector2(960, 300)
HintText = "You finished the level. Each level adds one new place to the map."
ArrowTargets = PackedVector2Array(1866, 76)

[node name="HintGiveUp" parent="." instance=ExtResource("1_tgmot")]
visible = false
position = Vector2(960, 300)
HintText = "You can hold this button to reveal the selected place."
ArrowTargets = PackedVector2Array(135, 86)

[connection signal="gui_input" from="Panel" to="." method="_on_panel_gui_input"]
